# no-life-chatter

./: .env.example  .gitignore  1-setup.bat  10-export-lora-rag-smoke-cases.bat  10-rebuild-persona-artifacts-background.bat  10-rebuild-persona-artifacts.bat  11-copy-runpod-lora-rag-smoke-command.bat  12-download-thickpoo-user-logs.bat  12-train-intent-probes.bat  13-build-intent-axis-queue.bat  13-download-other-channel-logs-for-thickpoo-members.bat  14-freshness-check.bat  2-login.bat  3-run.bat  4-export-finetune-pilot.bat  4-run-tests.bat  5-open-finetune-files.bat  6-preview-persona-rag.bat  7-install-runpod-lora-result.bat  8-copy-runpod-smoke-test-command.bat  9-backup-unsynced-data.bat  9-compare-lora-vs-local-rag.bat  LICENSE  README.md  _bot-loop.bat  _config.yml  auth.py  chatbot.py  command_processor.py  command_registry.py  config.example.toml  config.py  handlers.py  index.html  pyproject.toml  requirements.txt  run-background.vbs  show-log.bat  stop-bot-FOREVER.bat  stop-bot.bat
assets/: pages.css  pages.js
commands/: admin.py  artifacts.py  askchat.py  autotl.py  axis.py  axismerge.py  banuser.py  botchance.py  botcontext.py  botmode.py  botpersona.py  bottom.py  chan_autotl.py  chatstats.py  distinct.py  emote.py  experimental.py  explain.py  firstseen.py  funny.py  generate.py  global_autotl.py  help.py  hyper.py  iq.py  irony.py  like.py  markers.py  markov.py  mimic.py  modelqueue.py  notranslate.py  persona.py  ping.py  practice.py  quote.py  random.py  regex.py  regulars.py  romanize.py  (+16 more)
docs/: CHAT_ARCHIVE.md  CHAT_PERSONALITY_RESEARCH.md  (+17 more)
(+108 files in other folders)
