[tool.poetry]
name = "nolifechatter"
version = "0.1.0"
description = "A Twitch chat translation bot with a language-learning practice mode."
authors = ["LacrimaeAware <136732999+LacrimaeAware@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
twitchio = "^2.9.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
aiohttp = "^3.9.5"
google-cloud-translate = "^3.15.3"
psutil = "^6.0.0"
lingua-language-detector = "^2.0.0"   # free, local language detection (no API cost)
# Romanization engines (practice mode)
pykakasi = "^2.2.1"      # Japanese
pythainlp = "^5.0.0"     # Thai

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
